--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,39 +1,4 @@
 <div class="container">
-  <div class="jumbotron">
-    <h1 class="text-center">List of the users</h1>
-  </div>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Age</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>0</td>
-        <td>Sasha</td>
-        <td>Sidorov</td>
-        <td>sashasidorov@gmail.com</td>
-        <td>29</td>
-      </tr>
-      <tr>
-        <td>0</td>
-        <td>Sasha</td>
-        <td>Sidorov</td>
-        <td>sashasidorov@gmail.com</td>
-        <td>29</td>
-      </tr>
-      <tr>
-        <td>0</td>
-        <td>Sasha</td>
-        <td>Sidorov</td>
-        <td>sashasidorov@gmail.com</td>
-        <td>29</td>
-      </tr>
-    </tbody>
-  </table>
+  <h1 class="text-center">List of the users</h1>
+  <list-of-users></list-of-users>
 </div>
