--- a/src/app/components/list-of-users/list.html
+++ b/src/app/components/list-of-users/list.html
@@ -6,11 +6,12 @@
               id="paginationType"
               class="form-control"
               ng-model="pagination.selectedType"
-              ng-options="option for option in pagination.paginationType">
+              ng-options="option for option in pagination.paginationType"
+              ng-change="checkPagination(pagination.selectedType)">
       </select>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4" ng-if="pagination.selectedType === 'traditional'">
     <div class="form-group">
       <label for="paginationNumber">View rows</label>
       <select name="paginationNumber"
@@ -34,7 +35,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="user in users | limitTo : pagination.selectedNumber : 0">
+    <tr ng-repeat="user in users | limitTo : pagination.selectedNumber : pagination.showFrom">
       <td>{{user.id}}</td>
       <td>{{user.firstName}}</td>
       <td>{{user.lastName}}</td>
@@ -43,12 +44,11 @@
     </tr>
   </tbody>
 </table>
-<ul class="pagination">
-  <li><a href="#">1</a></li>
-  <li><a href="#">2</a></li>
-  <li><a href="#">3</a></li>
-  <li><a href="#">4</a></li>
-  <li><a href="#">5</a></li>
+<ul class="pagination"
+    ng-if="pagination.selectedType === 'traditional'">
+  <li ng-repeat="page in getNumber(labels) track by $index">
+    <a href="#" ng-click="setShowFrom($index)">{{$index+1}}</a>
+  </li>
 </ul>
 <spinner spin="spinner"></spinner>
 
