--- a/src/app/components/list-of-users/list.html
+++ b/src/app/components/list-of-users/list.html
@@ -72,7 +72,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="user in users | limitTo : pagination.selectedNumber : pagination.showFrom | orderBy:myOrderBy | filter:filters.selected | rangeFilter:filters.age.selected">
+    <tr ng-repeat="user in users | orderBy:myOrderBy | filter:filters.selected | rangeFilter:filters.age.selected | limitTo : pagination.selectedNumber : pagination.showFrom">
       <td>{{user.id}}</td>
       <td>{{user.firstName}}</td>
       <td>{{user.lastName}}</td>
